--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "crud project server",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "seedStart": "npx knex migrate:rollback && npx knex migrate:latest && npx knex seed:run && node server.js"
   },
   "author": "",
   "license": "ISC",
