--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -4,7 +4,4 @@ WORKDIR /server
 COPY  . /server
 EXPOSE 8080
 RUN npm install
-RUN npx knex migrate:rollback
-RUN npx knex migrate:latest
-RUN npx knex seed:run
-CMD npm start
+CMD npm run seedStart
